--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "docusign-esign": "^5.3.0"
   },
   "scripts": {
     "server": "env NODE_ENV=dev nodemon --watch server server/server.js",
