can get authorization token and almost get user information

--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "concurrently": "^5.2.0",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
+    "docusign-esign": "^5.5.0",
     "gocardless-nodejs": "^1.2.0",
     "helmet": "^3.23.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
+    "passport-docusign": "^1.3.0",
     "passport-google-oauth2": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
