--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ GOOGLE_CLIENT_SECRET=aU7PH3SFB0SeNkfbcI74UjlO
 DEV_URI=http://localhost:5000
 
 GC_ACCESS_TOKEN="sandbox_6zvAoHWLhH67M19y2XohuGG9p2YpiKrv92Cqz5JH"
+
+DOCUSIGN_INTEGRATION_KEY="bcdf5aa2-ce00-41fd-aa29-310460785082"
