--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@react-pdf/renderer": "^1.6.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -44,6 +45,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "sha.js": "^2.4.11",
+    "sweetalert2": "^9.17.1",
+    "sweetalert2-react-content": "^3.0.3",
     "universal-cookie": "^4.0.3",
     "usps-webtools": "^1.0.3",
     "uuid": "^8.3.0"
